All in one V1.1
Calcuating the difference between adc1 and adc2 with variables

--- a/Objects/adc.htm
+++ b/Objects/adc.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\Objects\adc.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\adc.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6160001: Last Updated: Tue Apr 26 11:26:35 2022
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6160001: Last Updated: Tue Apr 26 16:24:06 2022
 <BR><P>
 <H3>Maximum Stack Usage =          8 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-__rt_entry_sh &rArr; __user_setup_stackheap
+TIM2_IRQHandler
 <P>
 <H3>
 Functions with no stack information
@@ -641,7 +641,9 @@ Global Symbols
 <P><STRONG><a name="[60]"></a>SystemInit</STRONG> (Thumb, 18 bytes, Stack size 0 bytes, system_stm32f4xx.o(.text.SystemInit))
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f446xx.o(.text)
 </UL>
-<P><STRONG><a name="[26]"></a>TIM2_IRQHandler</STRONG> (Thumb, 78 bytes, Stack size 0 bytes, adc.o(.text.TIM2_IRQHandler))
+<P><STRONG><a name="[26]"></a>TIM2_IRQHandler</STRONG> (Thumb, 164 bytes, Stack size 8 bytes, adc.o(.text.TIM2_IRQHandler))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = TIM2_IRQHandler
+</UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f446xx.o(RESET)
 </UL>
 <P><STRONG><a name="[77]"></a>initADC1</STRONG> (Thumb, 64 bytes, Stack size 0 bytes, adc.o(.text.initADC1))
@@ -660,7 +662,7 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[6d]"></a>main</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, adc.o(.text.main))
+<P><STRONG><a name="[6d]"></a>main</STRONG> (Thumb, 266 bytes, Stack size 0 bytes, adc.o(.text.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = main &rArr; initTIM2
 </UL>
 <BR>[Calls]<UL><LI><a href="#[79]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendUSART2
